--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   pixel_perfect: ^1.1.1
   responsive_sizer: ^3.1.1
   flutter_screenutil: ^5.7.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
