--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   responsive_sizer: ^3.1.1
   flutter_screenutil: ^5.7.0
   carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -89,7 +90,7 @@ fonts:
       - asset: fonts/eBold.otf
         style: bold
       - asset: fonts/eLight.otf
-        style: light
+        style: 300
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
