--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
   date_picker_timetable: ^0.0.2
+  build_runner: ^2.4.6
+  json_annotation: ^4.8.1
+  cached_network_image: ^3.2.3
+  chewie: ^1.7.0
+  video_player: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +61,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
